; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/samuel/extr_keymap.c_mod_press.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/samuel/extr_keymap.c_mod_press.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@last_mod = common dso_local global i32 0, align 4
@tap_timer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mod_press(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @last_mod, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %3
  %11 = load i32, i32* @last_mod, align 4
  %12 = icmp ne i32 %11, 10
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @tap_code16(i32 %14)
  store i32 10, i32* @last_mod, align 4
  br label %21

16:                                               ; preds = %10, %3
  %17 = call i32 (...) @timer_read()
  store i32 %17, i32* @tap_timer, align 4
  %18 = load i32, i32* %6, align 4
  store i32 %18, i32* @last_mod, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @register_code(i32 %19)
  br label %21

21:                                               ; preds = %16, %13
  ret void
}

declare dso_local i32 @tap_code16(i32) #1

declare dso_local i32 @timer_read(...) #1

declare dso_local i32 @register_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
